feat: Add environment variables support and improve configuration
- Replace hardcoded values with environment variables in application.properties
- Add ENV_EXAMPLE.txt as reference for environment variables
- Update SpringSecurity to read CORS origin from environment variables
- Add .env files to .gitignore to prevent committing sensitive data
- Update database path to use relative path (./data/tada-db) for portability
- Add comprehensive README.md with setup instructions and configuration docs
- Remove temporary /public/create-admin endpoint
- Add Flyway migration for database schema management
- Update User entity with explicit @CollectionTable configuration